create a template Excel file to upload entities

--- a/configs.json
+++ b/configs.json
@@ -1,3 +1,4 @@
 {
-    "Purview-account-name": "YggdrasilPurviewCreatedByScript1"
+    "Purview-account-name": "YggdrasilPurviewCreatedByScript1",
+    "Purview-Excel-file": "purview.xlsx"
 }
