--- a/configs.json
+++ b/configs.json
@@ -1,4 +1,6 @@
 {
-    "Purview-account-name": "YggdrasilPurviewCreatedByScript1",
+    "Resource-group": "rg_yggdrasil_purview",
+    "location" : "eastus",
+    "Purview-account-name": "YggdrasilPurviewCreatedByScript2",
     "Purview-Excel-file": "purview.xlsx"
 }
