--- a/configs.json
+++ b/configs.json
@@ -1,6 +1,5 @@
 {
     "Resource-group": "rg_yggdrasil_purview",
     "location" : "eastus",
-    "Purview-account-name": "YggdrasilPurviewCreatedByScript1",
-    "Purview-Excel-file": "purview.xlsx"
+    "Purview-account-name": "YggdrasilPurviewCreatedByScript3"
 }
